subida de desafio terminado

--- a/4_colores.html
+++ b/4_colores.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
-</head>
-<body>
-<div id="colors-section">
-<div id="color1"></div>    
-<div id="color2"></div>    
-<div id="color3"></div>    
-<div id="color4"></div>   
-</div> 
+  </head>
+  <body>
+    <p>Haz click sobre el cuadro para cambiar a color Negro</p>
+    <div id="colors-section">
+      <div id="color1"></div>
+      <div id="color2"></div>
+      <div id="color3"></div>
+      <div id="color4"></div>
+    </div>
 
-<div id="key"></div>
-   
-
+    <div class="key-container">
+      <ul>
+        <li>presiona "a" para cambiar a color Rosa</li>
+        <li>presiona "s" para cambiar a color Naranja</li>
+        <li>presiona "d" para cambiar a color Celeste</li>
+      </ul>
+      <div id="key"></div>
+    </div>
+    <div style="display: flex; justify-content: center; margin-top: 100px">
+      <ul>
+        <li>Presiona "q" para crear un bloque de color MORADO</li>
+        <li>Presiona "w" para crear un bloque de color GRIS</li>
+        <li>Presiona "e" para crear un bloque de color CAFÉ</li>
+      </ul>
+    </div>
+    <div id="contenedor">
+      <!--aquí se agregaran elementos-->
+    </div>
 
     <script src="./assets/js/script1.js"></script>
-</body>
+  </body>
 </html>
